
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct dirent {int d_name; } ;
typedef int DIR ;


 scalar_t__ chdir (char*) ;
 scalar_t__ chroot (char*) ;
 int * opendir (char*) ;
 int puts (int ) ;
 struct dirent* readdir (int *) ;

int main(void)
{
    register DIR *d;
    register const struct dirent *e;

    if (chdir("/") || chroot("/tmp") || chdir("/") ||
        (d = opendir("..")) == ((void*)0)) {
        return 1;
    }
    while ((e = readdir(d)) != ((void*)0)) {
        puts(e->d_name);
    }
    return 0;
}
